add _header in views and folder assets contain folder files and style for css

--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scheduling</title>
+    <link rel="stylesheet" href="/static/style/style.css">
 </head>
 
 <body>
@@ -27,11 +28,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Scheduling</title>
+    <link rel="stylesheet" href="/static/style/style.css">
 </head>
 
 <body>
-    <table>
+    <table border="1">
+        <tr>
+            <th>ID</th>
+            <th>Priority</th>
+            <th>Arrival Time</th>
+            <th>Burst Time</th>
+            <th>Waiting Time</th>
+            <th>Turn Around Time</th>
+        </tr>
         {{range $elem := .Result}}
         <tr>
             <td>{{index $elem 0}}</td>
