--- a/views/index.html
+++ b/views/index.html
@@ -10,31 +10,6 @@
     <title>Scheduling</title>
 
     <link rel="stylesheet" href="/static/style/style.css">
-    <style>
-        @import url('https://fonts.googleapis.com/css?family=Quicksand:400,700&display=swap');
-
-        body {
-            font-family: 'Quicksand', sans-serif;
-        }
-
-        .bd-navbar {
-            min-height: 4rem;
-            background-color: #3498db;
-            box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, .05), inset 0 -1px 0 rgba(0, 0, 0, .1);
-        }
-
-        .masthead {
-            padding: 2rem 0 2rem;
-            position: relative;
-            background-color: #dd3d31;
-            background-size: cover;
-            z-index: 0;
-        }
-
-        .page-section {
-            padding: 8rem 0;
-        }
-    </style>
 </head>
 
 <body>
@@ -144,18 +119,18 @@
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-lg-6">
-                                        <h3>Hasil</h3>
+                                        <h3>Hasil Penjadwalan</h3>
                                     </div>
                                     <div class="col-lg-6">
                                         <button class="btn btn-block btn-primary" type="button" data-toggle="collapse"
-                                            data-target="#collapseExample" aria-expanded="false"
+                                            data-target="#collapseResult" aria-expanded="false"
                                             aria-controls="collapseExample">
                                             Klik untuk melihat data
                                         </button>
                                     </div>
                                 </div>
                                 <br>
-                                <div class="collapse" id="collapseExample">
+                                <div class="collapse" id="collapseResult">
                                     <table class="table table-hover">
                                         <thead class="thead">
                                             <tr>
